# EverythingEV

./: .gitattributes  .gitignore  Contributing.md  Pipfile  Procfile  README.md  a.py  datadump.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt  temp.html
.github/workflows/: test.yml
Sih/: forms.py  settings.py  urls.py  wsgi.py
alpr/: main.py
static/: user_charging.css
static/userapp/: _dashboard_business.scss  _dashboard_statistics.scss  _maintenance.scss  add_charging_station.css  analytics.css  analytics1.css  bootstrap.css  business.css  complaint_script.js  complaint_style.css  cs_analytics.css  cumulativedata_user.css  dash_style.css  dashboard_home.css  dashboard_home.css.map  dashboard_home.scss  evstyle.css  faq_style.css  login_style.css  maintain-table.css  maintain-table.css.map  maintain-table.scss  particles.js  provider_stations.css  registration_page.css  routeyourway.css  rs.css  rs_consumer.css  rs_consumer.css~master  rs_provider.css  sales.js  sales_3w.js  sales_4w.js  sales_heavy.js  sales_page.css  sales_page.js  service_dashBoard.css  service_provider.css  style.css  style1.css  (+9 more)
templates/: MaintenanceManForm.html  booking.html  buildchargingstation.html  chargepoolingform.html
templates/account/: login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html
templates/userapp/: 2w.html  3w.html  4w.html  FAQs.html  MaintainManTable.html  a.js  abc.html  add_charging_station.html  (+54 more)
userapp/: admin.py  apps.py  forms.py  helper.py  models.py  setup.cfg  urls.py  views.py
(+127 files in other folders)
